--- a/styles/detailOverlayView.css
+++ b/styles/detailOverlayView.css
@@ -20,6 +20,7 @@
     text-align: center;
     height: 72%;
     width: 35%;
+    min-height: 600px;
 }
 
 .detail-card-view {
