--- a/styles/pokemonCards.css
+++ b/styles/pokemonCards.css
@@ -45,6 +45,7 @@
     padding-top: 20px;
     width: 100%;
     height: 100%;
+    align-items: center;
 }
 
 .pokemon-types {
